Fixes use of deprecated java method